<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_main_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/main_side_offset">

    <ImageView
        android:id="@+id/movie_main_poster"
        android:layout_width="@dimen/main_poster_width"
        android:layout_height="@dimen/main_poster_height"
        android:contentDescription="@string/movie_poster_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_main_name"
        style="@style/MovieNameText.Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/movie_item_name_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_main_poster"
        tools:text="@string/tools_text_movie_title" />

    <TextView
        android:id="@+id/movie_main_description"
        style="@style/MovieDescriptionText.Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/movie_item_margin_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_main_name"
        tools:text="@string/tools_text_movie_description" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/movie_main_barrier_description_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="movie_main_description" />

    <include
        layout="@layout/my_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/movie_main_age_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/movie_main_age_rating" />

    <TextView
        android:id="@+id/movie_main_age_rating"
        style="@style/MovieRatingAgeText.Main"
        android:layout_width="@dimen/movie_main_age_restriction_size"
        android:layout_height="@dimen/movie_main_age_restriction_size"
        android:layout_marginTop="@dimen/movie_item_margin_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_main_barrier_description_bottom"
        tools:text="@string/tools_text_movie_age_description" />


</androidx.constraintlayout.widget.ConstraintLayout>